-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b83
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8141935 | emb-9 | Thomas Schatzl | P4 | Resolved | Fixed | team |
The method MaxPLABSizeBounds() in runtime/commandLineFlagConstraintsGC.cpp uses PLAB::min_size() in the error string instead of PLAB::max_size().
E.g.
118 static Flag::Error MaxPLABSizeBounds(const char* name, size_t value, bool verbose) {
119 #if INCLUDE_ALL_GCS
120 if ((UseConcMarkSweepGC || UseG1GC) && (value > PLAB::max_size())) {
121 CommandLineError::print(verbose,
122 "%s (" SIZE_FORMAT ") must be "
123 "less than or equal to ergonomic PLAB maximum size (" SIZE_FORMAT ")\n",
124 name, value, PLAB::min_size());
125 return Flag::VIOLATES_CONSTRAINT;
126 }
127 #endif // INCLUDE_ALL_GCS
128 return Flag::SUCCESS;
129 }
See line 124
E.g.
118 static Flag::Error MaxPLABSizeBounds(const char* name, size_t value, bool verbose) {
119 #if INCLUDE_ALL_GCS
120 if ((UseConcMarkSweepGC || UseG1GC) && (value > PLAB::max_size())) {
121 CommandLineError::print(verbose,
122 "%s (" SIZE_FORMAT ") must be "
123 "less than or equal to ergonomic PLAB maximum size (" SIZE_FORMAT ")\n",
124 name, value, PLAB::min_size());
125 return Flag::VIOLATES_CONSTRAINT;
126 }
127 #endif // INCLUDE_ALL_GCS
128 return Flag::SUCCESS;
129 }
See line 124
- backported by
-
JDK-8141935 Incorrect use of PLAB::min_size() in MaxPLABSizeBounds
-
- Resolved
-
- is blocked by
-
JDK-8134858 Remove G1 specific checking of Young/OldPLABSize in G1CollectorPolicy constructor
-
- Resolved
-
- relates to
-
JDK-8078555 GC: implement ranges (optionally constraints) for those flags that have them missing
-
- Resolved
-