8134856: Incorrect use of PLAB::min_size() in MaxPLABSizeBounds

Reviewed-by: jwilhelm, tbenson