hotspot/src/share/vm/runtime/commandLineFlagConstraintsGC.cpp
@@ -121,7 +121,7 @@ static Flag::Error MaxPLABSizeBounds(const char* name, size_t value, bool verbos
     CommandLineError::print(verbose,
                             "%s (" SIZE_FORMAT ") must be "
                             "less than or equal to ergonomic PLAB maximum size (" SIZE_FORMAT ")\n",
-                            name, value, PLAB::min_size());
+                            name, value, PLAB::max_size());
     return Flag::VIOLATES_CONSTRAINT;
   }
 #endif // INCLUDE_ALL_GCS
